--- a/style.css
+++ b/style.css
@@ -183,3 +183,12 @@ footer {
 .contact-btn.coffee i {
   margin-right: 5px;
 }
+
+.contact-btn.youtube {
+  background-color: #ff0000;
+  color: #fff;
+}
+
+.contact-btn.youtube i {
+  margin-right: 5px;
+}
