--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ footer {
 }
 
 .contact-btn.coffee {
-  background-color: #ffdd00;
+  background-color: #ffff8f;
   color: #000;
 }
 
@@ -185,7 +185,7 @@ footer {
 }
 
 .contact-btn.youtube {
-  background-color: #ff0000;
+  background-color: #FF5733;
   color: #fff;
 }
 
